// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createJestConfig can be called without arguments 1`] = `
Object {
  "cacheDirectory": "./node_modules/.cache/jest",
  "clearMocks": true,
  "collectCoverage": false,
  "collectCoverageFrom": Array [
    "src/**/*.js",
    "src/**/*.jsx",
  ],
  "coveragePathIgnorePatterns": Array [
    "<rootDir>/src/styleguidist/",
  ],
  "coverageReporters": Array [
    "cobertura",
    "html",
    "text",
  ],
  "coverageThreshold": Object {
    "global": Object {
      "branches": 100,
      "functions": 100,
      "lines": 100,
      "statements": 100,
    },
  },
  "modulePathIgnorePatterns": Array [
    "<rootDir>/lib/",
    "<rootDir>/es/",
  ],
  "testEnvironment": "jsdom",
  "testMatch": Array [
    "<rootDir>/**/__tests__/**/*.test.js",
    "<rootDir>/**/*.test.js",
  ],
  "testPathIgnorePatterns": Array [
    "/node_modules/",
    "<rootDir>/lib/",
    "<rootDir>/es/",
  ],
}
`;

exports[`createJestConfig shallow merges config 1`] = `
Object {
  "cacheDirectory": "./node_modules/.cache/jest",
  "clearMocks": true,
  "collectCoverage": false,
  "collectCoverageFrom": Array [
    "src/**/*.js",
    "src/**/*.jsx",
  ],
  "coveragePathIgnorePatterns": Array [
    "<rootDir>/src/styleguidist/",
  ],
  "coverageReporters": Array [
    "cobertura",
    "html",
    "text",
  ],
  "coverageThreshold": Object {
    "global": Object {
      "branches": 100,
      "functions": 100,
      "lines": 100,
      "statements": 100,
    },
  },
  "modulePathIgnorePatterns": Array [
    "<rootDir>/lib/",
    "<rootDir>/es/",
  ],
  "setupFilesAfterEnv": Array [],
  "testEnvironment": "jsdom",
  "testMatch": Array [
    "<rootDir>/**/__tests__/**/*.test.js",
    "<rootDir>/**/*.test.js",
  ],
  "testPathIgnorePatterns": Array [
    "/node_modules/",
    "<rootDir>/lib/",
    "<rootDir>/es/",
  ],
}
`;
